Archive2/1f/f35b51d2009437/output
main.cpp:10:15: error: call to deleted constructor of 'with_copy'
    with_copy x = with_copy();
              ^   ~~~~~~~~~~~
main.cpp:6:5: note: function has been explicitly marked deleted here
    with_copy(with_copy&&) = delete;
    ^
1 error generated.
